--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,16 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^7.3",
     "ext-json": "*",
     "illuminate/queue": "^8.0",
-    "illuminate/support": "^v8.0",
     "php-amqplib/php-amqplib": "^2.12"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.3",
     "mockery/mockery": "^1.0",
-    "friendsofphp/php-cs-fixer": "^2.16"
+    "friendsofphp/php-cs-fixer": "^2.17",
+    "orchestra/testbench": "^6.0"
   },
   "autoload": {
     "psr-4": {
