--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,16 @@
   "require": {
     "php": "^7.2",
     "ext-json": "*",
-    "illuminate/queue": "^v6.0",
-    "illuminate/support": "^v6.0",
+    "illuminate/queue": "^6.0|^8.0",
+    "illuminate/support": "^v6.0|^8.0",
     "php-amqplib/php-amqplib": "^2.12"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.3",
     "mockery/mockery": "^1.0",
-    "friendsofphp/php-cs-fixer": "^2.16"
+    "laravel/horizon": "^5.0",
+    "friendsofphp/php-cs-fixer": "^2.17",
+    "orchestra/testbench": "^6.0"
   },
   "autoload": {
     "psr-4": {
